--- a/HW3/hw03.Rmd
+++ b/HW3/hw03.Rmd
@@ -318,7 +318,7 @@ pomp_tot_data %>%
   geom_smooth(method = "lm")
 ```
 
-  > In all of the scatterplots, it can be said that there is a weak to moderate positive correlation between green personality and other personalities. The relation between green personality and other personality is a positive one due to the effect it has on each other at a certain threshold although the evidence is not so clear on this matter. Students and non-students also seems to have a positive correlation with the personality factors with the exception of the non-respondent seeing a negative correlation. As the non-respondents' green personality goes up, their comp, intel, and open seem to go down.
+  > In all of the scatterplots, it can be said that there is a weak to moderate positive correlation between green personality and other personalities. The relation between green personality and other personality is a positive one due to the effect it has on each other at a certain threshold although the evidence is not so clear on this matter. Students and non-students also seems to have a positive correlation with the personality factors with the exception of the non-respondent seeing a negative correlation. As the non-respondents' green personality goes up, their comp, intel, and open seem to go down.Comp, Open seems to have the greatest impact on students and their green personality.
 
 ### 6. Compare **green reputation** for students and non-students using a **rainfall plot** (bar + density + data points).
 
@@ -330,6 +330,25 @@ pomp_tot_data %>%
   geom_bar()
 ```
 
+  > The green reputation for students and non-students seems to be similar (approximately 50 to 60 green personalty score) with the knowledge that not a lot of non-students participated in the study, which means that the ratio is unbalanced.
+
 ### 7. Compute a summary table of means, SDs, medians, minima, and maxima for the four total scores for students and non-students.
+
+```{r)
+pomp_tot_data %>% 
+  group_by(student) %>% 
+  summarize(across(green_tot_pomp:open_tot_pomp,
+  list(mean = ~ mean(.x, na.rm= TRUE),
+                sd = ~ sd(.x, na.rm = TRUE),
+                min = ~ min(.x, na.rm = TRUE),
+                max = ~ max(.x, na.rm = TRUE))))
+  ```
+  
+  
+  ```{r}
+  pomp_sum_table
+  ```
+
+
   
 In your assignment, prepare an RMarkdown file that includes both the coding and (for 4-7) narrative descriptions of your results.
