--- a/HW3/hw03.Rmd
+++ b/HW3/hw03.Rmd
@@ -1,3 +1,7 @@
+<!-- BMW: You are missing your YAML block at the top of your file. Please knit your script to both html_document and github_document. -->
+
+<!-- BMW: The knitted html file you have isn't the final version based on this script. -->
+
 # Homework 03
 
 You will analyze data looking at the relationship between **green reputation** and three personality traits--**compassion**, **intellectual curiosity**, and **openness to experiences**.
@@ -6,8 +10,8 @@ The dataset includes data from **students** and **non-students**.
 ```{r}
 dictionary <- readr::read_csv("green_dictionary.csv")
 green_data <- readr::read_csv("green_data.csv")
-library(tidyverse)
-library(psychTools)
+library(tidyverse) # BMW: library(tidyverse) already loads dplyr, tibble, tidyr, and ggplot. You don't need both. 
+library(psychTools) # BMW: I'm not sure why you loaded psychTools?
 library(scales)
 library(dplyr)
 library(tidyr)
@@ -23,8 +27,10 @@ For your assignment, do the following.
   
   > I started by transforming the dataframe into Tibble.
 
+<!-- BMW: Stylistically, be sparing with block quotes. Just use regular text -- it's easier to read. -->
+
 ```{r}
-as_tibble(green_data)
+as_tibble(green_data) # BMW: It was already a tibble. But a bigger deal is that you didn't assign the result, so it wasn't saved. 
 ```
 
 
@@ -113,6 +119,8 @@ green_data %>%
 ```
 
   > I decided to make a new data frame with the recoded data.
+
+<!-- BMW: I'm not sure why you have all of the code above that is redundant wit the chunk below. In your final script, you only need to include the final parts of your work that you retain. -->
   
 ```{r}
 new_green_data <- green_data %>% 
@@ -141,43 +149,127 @@ open_ex <- c("open7", "open8", "open9", "open10")
   > I started to do my calculation here with the new exclusion lists and the new data frame ( I decided to manually typed in every variables that were reverse so that way, I can see what I did if the code does not work on me).
   
 ```{r}
-new_green_data %>% 
-  rowwise() %>% 
-  mutate(green_tot = mean(c(green1, green2r, green3, green4, green5), na.rm = TRUE),
-         comp_tot = mean(c(comp1, comp2, comp3, comp4, comp5, comp6r, comp7r, comp8r, comp9r, comp10r), 
-                         na.rm = TRUE),
-         intel_tot = mean(c(intel1, intel2, intel3, intel4, intel5, intel6, intel7r, intel8r, intel9r, intel10r),
-                          na.rm = TRUE),
-         open_tot = mean(c(open1, open2, open3, open4, open5, open6, open7r, open8r, open9r, open10r), 
-                         na.rm = TRUE)) %>% 
-  na.omit() %>% 
+new_green_data %>%
+  rowwise() %>%
+  mutate(
+    green_tot = mean(c(green1, green2r, green3, green4, green5), na.rm = TRUE),
+    comp_tot = mean(
+      c(
+        comp1,
+        comp2,
+        comp3,
+        comp4,
+        comp5,
+        comp6r,
+        comp7r,
+        comp8r,
+        comp9r,
+        comp10r
+      ),
+      na.rm = TRUE
+    ),
+    intel_tot = mean(
+      c(
+        intel1,
+        intel2,
+        intel3,
+        intel4,
+        intel5,
+        intel6,
+        intel7r,
+        intel8r,
+        intel9r,
+        intel10r
+      ),
+      na.rm = TRUE
+    ),
+    open_tot = mean(
+      c(
+        open1,
+        open2,
+        open3,
+        open4,
+        open5,
+        open6,
+        open7r,
+        open8r,
+        open9r,
+        open10r
+      ),
+      na.rm = TRUE
+    )
+  ) %>%
+  na.omit() %>%
   select(id, green_tot, comp_tot, intel_tot, open_tot, student)
 ```
 
   > I ended up wanting to save this calculation into a new variable for later usage.
 
 ```{r}
-items_data <- new_green_data %>% 
-  rowwise() %>% 
-  mutate(green_tot = mean(c(green1, green2r, green3, green4, green5), na.rm = TRUE),
-         comp_tot = mean(c(comp1, comp2, comp3, comp4, comp5, comp6r, comp7r, comp8r, comp9r, comp10r), 
-                         na.rm = TRUE),
-         intel_tot = mean(c(intel1, intel2, intel3, intel4, intel5, intel6, intel7r, intel8r, intel9r, intel10r),
-                          na.rm = TRUE),
-         open_tot = mean(c(open1, open2, open3, open4, open5, open6, open7r, open8r, open9r, open10r), 
-                         na.rm = TRUE)) %>% 
+items_data <- new_green_data %>%
+  rowwise() %>%
+  mutate(
+    green_tot = mean(c(green1, green2r, green3, green4, green5), na.rm = TRUE),
+    comp_tot = mean(
+      c(
+        comp1,
+        comp2,
+        comp3,
+        comp4,
+        comp5,
+        comp6r,
+        comp7r,
+        comp8r,
+        comp9r,
+        comp10r
+      ),
+      na.rm = TRUE
+    ),
+    intel_tot = mean(
+      c(
+        intel1,
+        intel2,
+        intel3,
+        intel4,
+        intel5,
+        intel6,
+        intel7r,
+        intel8r,
+        intel9r,
+        intel10r
+      ),
+      na.rm = TRUE
+    ),
+    open_tot = mean(
+      c(
+        open1,
+        open2,
+        open3,
+        open4,
+        open5,
+        open6,
+        open7r,
+        open8r,
+        open9r,
+        open10r
+      ),
+      na.rm = TRUE
+    )
+  ) %>%
   na.omit()
 ```
 
   > Summary by students or non students.
 
 ```{r}
-items_data %>% 
-  group_by(student) %>% 
-  summarize(green_mean = mean(green_tot, na.rm = TRUE),
-            comp_mean = mean(comp_tot, na.rm = TRUE),
-            intel_mean = mean(intel_tot, na.rm = TRUE),
-            open_mean = mean(open_tot, na.rm = TRUE))
+items_data %>%
+  group_by(student) %>%
+  summarize(
+    green_mean = mean(green_tot, na.rm = TRUE),
+    comp_mean = mean(comp_tot, na.rm = TRUE),
+    intel_mean = mean(intel_tot, na.rm = TRUE),
+    open_mean = mean(open_tot, na.rm = TRUE)
+  )
 ```
 
 ### 3. Rescale the variables so that they go from 0-100 instead of the original range.
@@ -187,9 +279,18 @@ items_data %>%
   
 ```{r}
 data_pomp <- new_green_data %>%
-  mutate(across(c(green1:open10r &!student),
-         ~ recode(.x, "1" = 0, "2" = 25, "3" = 50, "4" = 75, "5" = 100),
-         .names = "{.col}_pomp"))
+  mutate(across(
+    c(green1:open10r & !student),
+    ~ recode(
+      .x,
+      "1" = 0,
+      "2" = 25,
+      "3" = 50,
+      "4" = 75,
+      "5" = 100
+    ),
+    .names = "{.col}_pomp"
+  ))
 ```
 
   > After I transform it, I wanted to produce a summary of the new data frame that included the pomps. 
@@ -204,30 +305,138 @@ data_pomp %>%
   > I first started out by calculating the total of all of the "pomps" columns.
 
 ```{r}
-data_pomp %>% 
-  rowwise() %>% 
-  mutate(green_tot_pomp = mean(c(green1_pomp, green2r_pomp, green3_pomp, green4_pomp, green5_pomp), na.rm = TRUE),
-         comp_tot_pomp = mean(c(comp1_pomp, comp2_pomp, comp3_pomp, comp4_pomp, comp5_pomp, comp6r_pomp, comp7r_pomp, comp8r_pomp, comp9r_pomp, comp10r_pomp), 
-                         na.rm = TRUE),
-         intel_tot_pomp = mean(c(intel1_pomp, intel2_pomp, intel3_pomp, intel4_pomp, intel5_pomp, intel6_pomp, intel7r_pomp, intel8r_pomp, intel9r_pomp, intel10r_pomp),
-                          na.rm = TRUE),
-         open_tot_pomp = mean(c(open1_pomp, open2_pomp, open3_pomp, open4_pomp, open5_pomp, open6_pomp, open7r_pomp, open8r_pomp, open9r_pomp, open10r_pomp), 
-                         na.rm = TRUE)) %>% 
-  na.omit() %>% 
-  select(id, green_tot_pomp, comp_tot_pomp, intel_tot_pomp, open_tot_pomp, student)
+data_pomp %>%
+  rowwise() %>%
+  mutate(
+    green_tot_pomp = mean(
+      c(
+        green1_pomp,
+        green2r_pomp,
+        green3_pomp,
+        green4_pomp,
+        green5_pomp
+      ),
+      na.rm = TRUE
+    ),
+    comp_tot_pomp = mean(
+      c(
+        comp1_pomp,
+        comp2_pomp,
+        comp3_pomp,
+        comp4_pomp,
+        comp5_pomp,
+        comp6r_pomp,
+        comp7r_pomp,
+        comp8r_pomp,
+        comp9r_pomp,
+        comp10r_pomp
+      ),
+      na.rm = TRUE
+    ),
+    intel_tot_pomp = mean(
+      c(
+        intel1_pomp,
+        intel2_pomp,
+        intel3_pomp,
+        intel4_pomp,
+        intel5_pomp,
+        intel6_pomp,
+        intel7r_pomp,
+        intel8r_pomp,
+        intel9r_pomp,
+        intel10r_pomp
+      ),
+      na.rm = TRUE
+    ),
+    open_tot_pomp = mean(
+      c(
+        open1_pomp,
+        open2_pomp,
+        open3_pomp,
+        open4_pomp,
+        open5_pomp,
+        open6_pomp,
+        open7r_pomp,
+        open8r_pomp,
+        open9r_pomp,
+        open10r_pomp
+      ),
+      na.rm = TRUE
+    )
+  ) %>%
+  na.omit() %>%
+  select(id,
+         green_tot_pomp,
+         comp_tot_pomp,
+         intel_tot_pomp,
+         open_tot_pomp,
+         student)
 ```
+
+<!-- BMW: I'm again confused as to why you have everything twice, once not assigned and once assigned? -->
+
   > I ended up wanting to create another variable containing the total for all of the pomps.
 
 ```{r}
-pomp_tot_data <- data_pomp %>% 
-  rowwise() %>% 
-  mutate(green_tot_pomp = mean(c(green1_pomp, green2r_pomp, green3_pomp, green4_pomp, green5_pomp), na.rm = TRUE),
-         comp_tot_pomp = mean(c(comp1_pomp, comp2_pomp, comp3_pomp, comp4_pomp, comp5_pomp, comp6r_pomp, comp7r_pomp, comp8r_pomp, comp9r_pomp, comp10r_pomp), 
-                         na.rm = TRUE),
-         intel_tot_pomp = mean(c(intel1_pomp, intel2_pomp, intel3_pomp, intel4_pomp, intel5_pomp, intel6_pomp, intel7r_pomp, intel8r_pomp, intel9r_pomp, intel10r_pomp),
-                          na.rm = TRUE),
-         open_tot_pomp = mean(c(open1_pomp, open2_pomp, open3_pomp, open4_pomp, open5_pomp, open6_pomp, open7r_pomp, open8r_pomp, open9r_pomp, open10r_pomp), 
-                         na.rm = TRUE))
+pomp_tot_data <- data_pomp %>%
+  rowwise() %>%
+  mutate(
+    green_tot_pomp = mean(
+      c(
+        green1_pomp,
+        green2r_pomp,
+        green3_pomp,
+        green4_pomp,
+        green5_pomp
+      ),
+      na.rm = TRUE
+    ),
+    comp_tot_pomp = mean(
+      c(
+        comp1_pomp,
+        comp2_pomp,
+        comp3_pomp,
+        comp4_pomp,
+        comp5_pomp,
+        comp6r_pomp,
+        comp7r_pomp,
+        comp8r_pomp,
+        comp9r_pomp,
+        comp10r_pomp
+      ),
+      na.rm = TRUE
+    ),
+    intel_tot_pomp = mean(
+      c(
+        intel1_pomp,
+        intel2_pomp,
+        intel3_pomp,
+        intel4_pomp,
+        intel5_pomp,
+        intel6_pomp,
+        intel7r_pomp,
+        intel8r_pomp,
+        intel9r_pomp,
+        intel10r_pomp
+      ),
+      na.rm = TRUE
+    ),
+    open_tot_pomp = mean(
+      c(
+        open1_pomp,
+        open2_pomp,
+        open3_pomp,
+        open4_pomp,
+        open5_pomp,
+        open6_pomp,
+        open7r_pomp,
+        open8r_pomp,
+        open9r_pomp,
+        open10r_pomp
+      ),
+      na.rm = TRUE
+    )
+  )
 ```
 
   > I then calculated the mean of the total for the pomps and group them by student.
@@ -294,10 +503,10 @@ grid.arrange(green_tot_histo,
  
 ```{r}
 pomp_tot_data %>% 
-  filter(!is.na(student)) %>% 
+  filter(!is.na(student)) %>% # BMW: You don't have any NAs for student since you coded them as "No_Response"
   ggplot() +
-  aes(x = green_tot_pomp, y = comp_tot_pomp, color = student) +
-  geom_jitter(alpha = .5, size = 3) +
+  aes(x = green_tot_pomp, y = comp_tot_pomp, color = student, fill = student) +
+  geom_jitter(alpha = .5, size = 3, height = .5, width = .5) + # BMW: If you use geom_jitter() instead of geom_point() with continuous variables, be sure to adjust the height and width so that it is a very small amount
   geom_smooth(method = "lm")
 ```
   
@@ -306,8 +515,8 @@ pomp_tot_data %>%
 pomp_tot_data %>% 
   filter(!is.na(student)) %>% 
   ggplot() +
-  aes(x = green_tot_pomp, y = intel_tot_pomp, color = student) +
-  geom_jitter(alpha = .5, size = 3) +
+  aes(x = green_tot_pomp, y = intel_tot_pomp, color = student, fill = student) +
+  geom_jitter(alpha = .5, size = 3, height = .5, width = .5) +
   geom_smooth(method = "lm")
 ```
 
@@ -315,8 +524,8 @@ pomp_tot_data %>%
 pomp_tot_data %>% 
   filter(!is.na(student)) %>% 
   ggplot() +
-  aes(x = green_tot_pomp, y = open_tot_pomp, color = student) +
-  geom_jitter(alpha = .5, size = 3) +
+  aes(x = green_tot_pomp, y = open_tot_pomp, color = student, fill = student) +
+  geom_jitter(alpha = .5, size = 3, height = .5, width = .5) +
   geom_smooth(method = "lm")
 ```
 
@@ -330,6 +539,19 @@ pomp_tot_data %>%
   ggplot() +
   aes(x = green_tot_pomp, color = student, fill = student) +
   geom_bar()
+```
+
+<!-- BMW: This isn't a rainfall plot as demonstrated in class. See below. -->
+
+```{r}
+pomp_tot_data %>% 
+  drop_na(green_tot_pomp) %>% 
+  ggplot() +
+  aes(x = green_tot_pomp, y = student, color = student, fill = student) +
+  geom_jitter(width = 0, height = .1) +
+  geom_boxplot(color = "black", fill = "transparent", width = .2) +
+  ggdist::stat_slab(height = .3, alpha = .5, position = position_nudge(y = .15))
+  
 ```
 
   > The green reputation for students and non-students seems to be similar (approximately 50 to 60 green personalty score) with the knowledge that not a lot of non-students participated in the study, which means that the ratio is unbalanced.
